--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body a{
 }
 .row{
 	margin:0;
-}	
+}
 a#toTop{
   margin-top: 0;
 }
@@ -57,7 +57,7 @@ a#toTop{
 	position:absolute;
 	top:0;
 	z-index:999;
-	
+
 }
 .glyphicon-road:before{
 	color:#fff;
@@ -65,7 +65,7 @@ a#toTop{
 	margin-right:5px;
 }
 .logo a{
-	background: #73eac4;
+	background: #8b50b3;
   padding: 1.6em 0.7em;
   display:inline-block;
 }
@@ -78,10 +78,10 @@ ul.nav.navbar-nav li a{
 	padding:2.3em 1.7em;
 	font-family: 'TitilliumWeb-Regular';
 	font-size:1.1em;
-	color:#333;	
+	color:#333;
 }
 ul.nav.navbar-nav li a:hover{
-	color: #fd7364;
+	color: #8499e7;
 }
 ul.dropdown-menu li a{
 	padding:0.6em!important
@@ -93,11 +93,11 @@ ul.nav.navbar-nav li{
     border-bottom: 1px solid #e7e7e7;
 }
 .navbar-default {
-    background-color: transparent;  
-    border-color: #FFFFFF;	
+    background-color: transparent;
+    border-color: #FFFFFF;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    color:#fd7364;
+    color:#8499e7;
     background-color: #fff;
 }
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
@@ -117,7 +117,7 @@ ul.nav.navbar-nav li{
 	.content.black p a {
 		color: #08c;
 	}
-	
+
 	.caret {
     margin-left: 6px;
 }
@@ -149,14 +149,14 @@ ul.nav.navbar-nav li{
 		color: #262626;
 		background-color: #f5f5f5;
 	}
-	
+
 	@media (max-width: 767px) {
 		.dropdown-menu.multi-column {
 			min-width: 240px !important;
 			overflow-x: hidden;
 		}
 	}
-	
+
 	@media (max-width: 480px) {
 		.content {
 			width: 90%;
@@ -166,7 +166,7 @@ ul.nav.navbar-nav li{
 	}
 .navbar {
     margin-bottom: 0px;
-}	
+}
 /*--banner--*/
 .banner{
 	background:url(../images/bnr3.jpg) no-repeat 0px 0px;
@@ -175,8 +175,8 @@ ul.nav.navbar-nav li{
 	position:relative;
 }
 .package{
-	 background:rgba(253, 115, 100, 0.68);
-	 padding:2em 3em 2em 4em; 
+	 background:rgba(132,153,231, 0.68);
+	 padding:2em 3em 2em 4em;
 	 position: relative;
 }
 .package h3 a{
@@ -187,7 +187,7 @@ ul.nav.navbar-nav li{
 	text-decoration:none;
 }
 .package ul li{
-	display:inline-block;		
+	display:inline-block;
 }
 .package ul li a{
 	font-family:'Open Sans', sans-serif;
@@ -195,7 +195,7 @@ ul.nav.navbar-nav li{
 	display:block;
 	color:#333;
 }
-.glyphicon1{    
+.glyphicon1{
     top: 1px;
     display: inline-block;
     font-family: 'Glyphicons Halflings';
@@ -232,7 +232,7 @@ ul.nav.navbar-nav li{
 }
 .wel-info h2{
 	font-size:2.5em;
-	color:#73eac4;
+	color:#8b50b3;
 	font-family: 'TitilliumWeb-Bold';
 }
 .wel-info h4 {
@@ -255,7 +255,7 @@ ul.nav.navbar-nav li{
 	min-height:400px;
 }
 .choose h3{
-	background:#fd7364;
+	background:#8499e7;
 	padding:0.5em 0;
 	color:#fff;
 	font-size:1.5em;
@@ -294,7 +294,7 @@ ul.nav.navbar-nav li{
 }
 .testi-top h3,.destination-top h3,.subscrib-top h3{
 	font-size: 2.2em;
-    color: #73eac4;
+    color: #8b50b3;
     font-family: 'TitilliumWeb-Bold';
 }
 .testi-top p,.destination-top p,.subscrib-top p{
@@ -354,7 +354,7 @@ ul.nav.navbar-nav li{
 		background:#fff;
 }
 .testimonial-right h5{
-	color: #fd7364;
+	color: #8499e7;
 	font-family: 'TitilliumWeb-Regular';
 	margin-top:1em;
 	font-size:1.6em;
@@ -390,17 +390,17 @@ ul.nav.navbar-nav li{
 	-o-border-radius: 50%;
 	-ms-border-radius: 50%;
 	background:transparent;
-	border:2px solid #73eac4;
+	border:2px solid #8b50b3;
 }
 .callbacks_here a:after{
-	background:#73eac4;
+	background:#8b50b3;
 }
 .callbacks_tabs a{
 	visibility:hidden;
 }
 .callbacks_tabs li{
 	display:inline-block;
-	
+
 }
 .callbacks_nav {
   position: absolute;
@@ -441,12 +441,12 @@ ul.callbacks_tabs.callbacks_tabs {
 .desti-info{
 	text-align:center;
 	padding:1em;
-	
+
 	border:1px solid #eee;
 	border-top:none;
 }
 .desti-info h5 a{
-	color:#fd7364;
+	color:#8499e7;
 	display:inline-block;
 	font-size:1.2em;
 	margin-bottom:8px;
@@ -454,7 +454,7 @@ ul.callbacks_tabs.callbacks_tabs {
 	font-family: 'TitilliumWeb-Bold';
 }
 .desti-info h5 a:hover{
-    color: #73eac4;
+    color: #8b50b3;
 }
 .desti-info p{
 	color:#999;
@@ -469,7 +469,7 @@ ul.callbacks_tabs.callbacks_tabs {
   font-size: 1.6em;
   font-family: 'TitilliumWeb-Regular';
    font-weight:600;
-  color:#73eac4;
+  color:#8b50b3;
   margin:0em 0em 0.5em 0em;
 }
 .ftr-grid1 p ,.news-ltr p{
@@ -542,10 +542,10 @@ color:#c4302b;
 .news-ltr form input[type="submit"] {
   width: 23%;
   color: #fff;
-  border: 2px solid #fd7364;
+  border: 2px solid #8499e7;
   outline: none;
   padding: 10px 12px;
-  background:#fd7364;
+  background:#8499e7;
   transition: 0.5s all;
   -webkit-transition: 0.5s all;
   -moz-transition: 0.5s all;
@@ -555,9 +555,9 @@ color:#c4302b;
   font-size:0.9em;
 }
 .news-ltr form input[type="submit"]:hover{
-	  border: 2px solid #fd7364;  
+	  border: 2px solid #8499e7;
   background: transparent;
-  color:#fd7364;  
+  color:#8499e7;
 }
 .news-ltr form{
 	margin-top:2em;
@@ -603,12 +603,12 @@ color:#c4302b;
 }
 .about h2,.footer-top h3,.team-top h3,.gallery h2,h2.top{
     font-size: 2.3em;
-    color: #73eac4;
+    color: #8b50b3;
     font-family: 'TitilliumWeb-Bold';
 	text-align:center;
 }
 .about-top-sec h3 {
-    color: #fd7364;
+    color: #8499e7;
     font-family: 'TitilliumWeb-Regular';
     margin-top: 1em;
     font-size: 2em;
@@ -643,7 +643,7 @@ color:#c4302b;
     text-decoration: none;
 }
 .about-list ul li a:hover {
-    color: #fd7364;
+    color: #8499e7;
     padding-left: 1em;
 }
 .what-offer{
@@ -801,7 +801,7 @@ h3.ghj {
 .label {
   font-weight: 300 !important;
   border-radius:4px;
-}  
+}
 .grid_5{
 	background:none;
 	padding:2em 0;
@@ -957,9 +957,9 @@ h2.typoh2{
 	-ms-border-radius: 0.3em;
 }
 .contact-but form input[type="submit"] {
-	border: solid 1px #fd7364;
+	border: solid 1px #8499e7;
 	outline: none;
-	color: #fd7364;	
+	color: #8499e7;
 	padding: 10px 36px;
 	font-size: 1em;
 	font-weight: 600;
@@ -969,8 +969,8 @@ h2.typoh2{
 	background:transparent;
 }
 .contact-but form input[type="submit"]:hover {
-	background: #fd7364;
-	border: solid 1px #fd7364;
+	background: #8499e7;
+	border: solid 1px #8499e7;
 	transition: 0.5s all;
 	color:#fff;
 	-webkit-transition: 0.5s all;
@@ -994,7 +994,7 @@ h2.typoh2{
     -moz-osx-font-smoothing: grayscale;
 }
 .glyphicon3 {
-	color: #fd7364;
+	color: #8499e7;
 	font-size:1.8em;
 }
 .f-1 p {
@@ -1011,7 +1011,7 @@ h2.typoh2{
 	color:#999;
 }
 .f-1 p a:hover,.footer-text p a:hover{
-	color: #fd7364;
+	color: #8499e7;
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
 	-moz-transition: 0.5s all;
@@ -1243,7 +1243,7 @@ ul.nav.navbar-nav li a {
 }
 .guide-grid {
     width: 33.3%;
-    float: left;    
+    float: left;
 }
 .guide-grid h4 {
     font-size: 1.3em;
@@ -1348,7 +1348,7 @@ ul.nav.navbar-nav li {
     width: 73%;
 }
 .desti-grid {
-    width: 100%;   
+    width: 100%;
     margin-bottom: 2em;
 }
 .about h2, .footer-top h3, .team-top h3, .gallery h2, h2.top {
